--- a/GPOLabs.vcxproj
+++ b/GPOLabs.vcxproj
@@ -172,6 +172,12 @@
     <ClCompile Include="Lab2\Rectangle.cpp" />
     <ClCompile Include="Lab2\Structure.cpp" />
     <ClCompile Include="Lab2\Time.cpp" />
+    <ClCompile Include="Lab3\Book.cpp" />
+    <ClCompile Include="Lab3\Flight_Lab3.cpp" />
+    <ClCompile Include="Lab3\Lab3_execute.cpp" />
+    <ClCompile Include="Lab3\Point.cpp" />
+    <ClCompile Include="Lab3\Rectangle_Lab3.cpp" />
+    <ClCompile Include="Lab3\Time_Lab3.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menues\Menu.cpp" />
   </ItemGroup>
@@ -196,6 +202,12 @@
     <ClInclude Include="Lab2\SongStructure.h" />
     <ClInclude Include="Lab2\SubjectStructure.h" />
     <ClInclude Include="Lab2\Time.h" />
+    <ClInclude Include="Lab3\Book.h" />
+    <ClInclude Include="Lab3\Flight_Lab3.h" />
+    <ClInclude Include="Lab3\Lab3_execute.h" />
+    <ClInclude Include="Lab3\Point.h" />
+    <ClInclude Include="Lab3\Rectangle_Lab3.h" />
+    <ClInclude Include="Lab3\Time_Lab3.h" />
     <ClInclude Include="Menues\Menu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
