fix(Lab2, Lab3): исправление замечаний, именований классов и подключаемых файлов

--- a/GPOLabs.vcxproj
+++ b/GPOLabs.vcxproj
@@ -139,6 +139,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Common\Input.cpp" />
+    <ClCompile Include="CurrentTime.cpp" />
     <ClCompile Include="Lab1\1.1.1.1\Task_1.1.1.1.cpp" />
     <ClCompile Include="Lab1\1.1.1.2\Task_1.1.1.2.cpp" />
     <ClCompile Include="Lab1\1.1.2.1\Task_1.1.2.1.cpp" />
@@ -162,62 +163,55 @@
     <ClCompile Include="Lab1\1.1.5.7\Task_1.1.5.7.cpp" />
     <ClCompile Include="Lab1\1.1.5.8\Task_1.1.5.8.cpp" />
     <ClCompile Include="Lab2\Circle.cpp" />
-    <ClCompile Include="Lab2\DynamicStructure.cpp" />
     <ClCompile Include="Lab2\Enums\Enum.cpp" />
     <ClCompile Include="Lab2\Exception.cpp" />
     <ClCompile Include="Lab2\Execute.cpp" />
-    <ClCompile Include="Lab2\Flight.cpp" />
     <ClCompile Include="Lab2\FunctionStructure.cpp" />
-    <ClCompile Include="Lab2\Movie.cpp" />
     <ClCompile Include="Lab2\Rectangle.cpp" />
     <ClCompile Include="Lab2\Structure.cpp" />
-    <ClCompile Include="Lab2\Time.cpp" />
-    <ClCompile Include="Lab3\Album_Lab3.cpp" />
-    <ClCompile Include="Lab3\Band_Lab3.cpp" />
+    <ClCompile Include="Lab3\Album.cpp" />
+    <ClCompile Include="Lab3\Band.cpp" />
     <ClCompile Include="Lab3\Book.cpp" />
-    <ClCompile Include="Lab3\Flight_Lab3.cpp" />
-    <ClCompile Include="Lab3\Genre_Lab3.cpp" />
+    <ClCompile Include="Lab3\Flight.cpp" />
+    <ClCompile Include="Lab3\Genre.cpp" />
     <ClCompile Include="Lab3\Lab3_execute.cpp" />
     <ClCompile Include="Lab3\Point.cpp" />
-    <ClCompile Include="Lab3\Rectangle_Lab3.cpp" />
+    <ClCompile Include="Lab3\Rectangle.cpp" />
     <ClCompile Include="Lab3\Route.cpp" />
-    <ClCompile Include="Lab3\Song_Lab3.cpp" />
-    <ClCompile Include="Lab3\Time_Lab3.cpp" />
+    <ClCompile Include="Lab3\Song.cpp" />
+    <ClCompile Include="Lab3\Time.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menues\Menu.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Common\Constants\Consts.h" />
     <ClInclude Include="Common\Lab1Header.h" />
     <ClInclude Include="Common\Input.h" />
+    <ClInclude Include="CurrentTime.h" />
     <ClInclude Include="Lab2\Circle.h" />
     <ClInclude Include="Lab2\ContactStructure.h" />
-    <ClInclude Include="Lab2\DynamicStructure.h" />
     <ClInclude Include="Lab2\Enums\ColorEnum.h" />
     <ClInclude Include="Lab2\Enums\Enum.h" />
-    <ClInclude Include="Lab2\Enums\GenreEnumh.h" />
     <ClInclude Include="Lab2\Enums\PhoneCompanyEnum.h" />
     <ClInclude Include="Lab2\Enums\SeasonEnum.h" />
     <ClInclude Include="Lab2\Enums\StudyTypeEnum.h" />
     <ClInclude Include="Lab2\Enums\WeekDayEnum.h" />
     <ClInclude Include="Lab2\Exception.h" />
     <ClInclude Include="Lab2\Execute.h" />
-    <ClInclude Include="Lab2\Flight.h" />
-    <ClInclude Include="Lab2\Movie.h" />
     <ClInclude Include="Lab2\Square.h" />
     <ClInclude Include="Lab2\SongStructure.h" />
     <ClInclude Include="Lab2\SubjectStructure.h" />
-    <ClInclude Include="Lab2\Time.h" />
-    <ClInclude Include="Lab3\Album_Lab3.h" />
-    <ClInclude Include="Lab3\Band_Lab3.h" />
+    <ClInclude Include="Lab3\Album.h" />
+    <ClInclude Include="Lab3\Band.h" />
     <ClInclude Include="Lab3\Book.h" />
-    <ClInclude Include="Lab3\Flight_Lab3.h" />
-    <ClInclude Include="Lab3\Genre_Lab3.h" />
+    <ClInclude Include="Lab3\Flight.h" />
+    <ClInclude Include="Lab3\Genre.h" />
     <ClInclude Include="Lab3\Lab3_execute.h" />
     <ClInclude Include="Lab3\Point.h" />
-    <ClInclude Include="Lab3\Rectangle_Lab3.h" />
+    <ClInclude Include="Lab3\Rectangle.h" />
     <ClInclude Include="Lab3\Route.h" />
-    <ClInclude Include="Lab3\Song_Lab3.h" />
-    <ClInclude Include="Lab3\Time_Lab3.h" />
+    <ClInclude Include="Lab3\Song.h" />
+    <ClInclude Include="Lab3\Time.h" />
     <ClInclude Include="Menues\Menu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
